# cppreactui

./: .gitignore  Dockerfile  Printer.ice  README.md
node/: Client.js
react-app/: package-lock.json  package.json
react-app/src/: App.tsx  Communicator.tsx  DemoWidget.tsx  Ice.d.ts  index.tsx
src/: CMakeLists.txt  Client.cpp  main.cpp
standalonewebsite/: Client.js  index.html
websocketserver/: CMakeLists.txt  server.cpp
